--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 'Zec的小站'
+title: ''
 subtitle: ''
 description: 'Today is the second best time to learn something, yesterday is the best.'
 keywords:
@@ -88,6 +88,15 @@ use_date_for_updated: false
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+markdown:
+  plugins:
+    - markdown-it-footnote
+    - markdown-it-sup
+    - markdown-it-sub
+    - markdown-it-abbr
+    - markdown-it-emoji
+    - hexo-math
 
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
