--- a/blog/source/_data/yun.yml
+++ b/blog/source/_data/yun.yml
@@ -14,7 +14,7 @@ colors:
 
 # Favicon
 # ---------------
-favicon: /astro.svg
+favicon: /favicon.ico
 
 # ---------------------------------------------------------------
 # Sidebar Settings
@@ -39,11 +39,11 @@ social:
     link: /atom.xml # config.feed.path
     icon: icon-rss-line
     color: orange
-  - name: QQ
-    # https://isux.tencent.com/wp-content/uploads/2016/05/20160512101222609.pdf
-    link: https://wpa.qq.com/msgrd?v=3&uin=258415824&site=qq&menu=yes
-    icon: icon-qq-line
-    color: "#12B7F5"
+  # - name: QQ
+  #   # https://isux.tencent.com/wp-content/uploads/2016/05/20160512101222609.pdf
+  #   link: https://wpa.qq.com/msgrd?v=3&uin=258415824&site=qq&menu=yes
+  #   icon: icon-qq-line
+  #   color: "#12B7F5"
   - name: GitHub
     link: https://github.com/MerenguesGeek
     icon: icon-github-line
@@ -64,10 +64,10 @@ social:
     link: https://music.163.com/#/user/home?id=30409754
     icon: icon-netease-cloud-music-line
     color: "#C20C0C"
-  - name: 知乎
-    link: https://www.zhihu.com/people/semi-75
-    icon: icon-zhihu-line
-    color: "#0084FF"
+  # - name: 知乎
+  #   link: https://www.zhihu.com/people/Merengues_Geek
+  #   icon: icon-zhihu-line
+  #   color: "#0084FF"
   # - name: 哔哩哔哩
   #   link: https://space.bilibili.com/1579790
   #   icon: icon-bilibili-line
@@ -98,11 +98,11 @@ social:
   #   color: black
 
 # Extra links
-# pages:
-#   - name: 我的小伙伴们
-#     url: /links/
-#     icon: icon-genderless-line
-#     color: dodgerblue
+pages:
+  # - name: 我的小伙伴们
+  #   url: /links/
+  #   icon: icon-genderless-line
+  #   color: dodgerblue
 
 # pages
 # -------
@@ -604,7 +604,7 @@ google_analytics:
 # https://katex.org/
 katex:
   copy_tex: true
-  global: false
+  global: true
 
 # plugins
 aplayer:
