--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -89,14 +89,14 @@ use_date_for_updated: false
 per_page: 10
 pagination_dir: page
 
-markdown:
-  plugins:
-    - markdown-it-footnote
-    - markdown-it-sup
-    - markdown-it-sub
-    - markdown-it-abbr
-    - markdown-it-emoji
-    - hexo-math
+# markdown:
+#   plugins:
+#     - markdown-it-footnote
+#     - markdown-it-sup
+#     - markdown-it-sub
+#     - markdown-it-abbr
+#     - markdown-it-emoji
+#     - hexo-math
 
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
