--- a/blog/source/_data/yun.yml
+++ b/blog/source/_data/yun.yml
@@ -120,7 +120,7 @@ girls:
 # Sidebar Avatar
 avatar:
   enable: true
-  url: /astro.png
+  url: https://tva1.sinaimg.cn/large/007S8ZIlgy1gexqyp4lvxj30k10k076g.jpg
   # If true, the avatar would be dispalyed in circle.
   rounded: true
   # The value of opacity should be choose from 0 to 1 to set the opacity of the avatar.
