--- a/blog/package.json
+++ b/blog/package.json
@@ -27,6 +27,7 @@
     "hexo-renderer-pandoc": "^0.3.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
-    "hexo-tag-cloud": "^2.1.2"
+    "hexo-tag-cloud": "^2.1.2",
+    "wordcloud": "^1.1.1"
   }
 }
