--- a/blog/package.json
+++ b/blog/package.json
@@ -25,6 +25,7 @@
     "hexo-prism-plugin": "^2.3.0",
     "hexo-render-pug": "^2.1.4",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-tag-cloud": "^2.1.2",
