--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: ''
 subtitle: ''
-description: 'Today is the second best time to learn something, yesterday is the best.'
+description: 'Do not go gentle into that good night.'
 keywords:
-author: Zec
+author: Merengues0x2A
 language: zh-CN
 timezone: ''
 
