--- a/blog/source/_data/yun.yml
+++ b/blog/source/_data/yun.yml
@@ -61,7 +61,7 @@ social:
   #   icon: icon-douban-line
   #   color: "#007722"
   - name: 网易云音乐
-    link: https://music.163.com/#/user/home?id=94462862
+    link: http://music.163.com/m/user/home?id=3419123822
     icon: icon-netease-cloud-music-line
     color: "#C20C0C"
   # - name: 知乎
