--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,7 @@
     "version": "4.2.1"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "hexo": "^4.2.1",
     "hexo-blog-encrypt": "^3.0.13",
     "hexo-deployer-git": "^2.1.0",
@@ -25,10 +26,11 @@
     "hexo-prism-plugin": "^2.3.0",
     "hexo-render-pug": "^2.1.4",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^3.1.0",
+    "hexo-renderer-marked": "^3.3.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-tag-cloud": "^2.1.2",
+    "install": "^0.13.0",
     "wordcloud": "^1.1.1"
   }
 }
