--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://zecis.me
+url: https://deepaxon.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -113,5 +113,5 @@ theme: yun
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:MerenguesGeek/MerenguesGeek.github.io.git
+  repo: git@github.com:powerball0x2a/powerball0x2a.github.io.git
   branch: master
