--- a/blog/source/_data/yun.yml
+++ b/blog/source/_data/yun.yml
@@ -44,30 +44,30 @@ social:
   #   link: https://wpa.qq.com/msgrd?v=3&uin=258415824&site=qq&menu=yes
   #   icon: icon-qq-line
   #   color: "#12B7F5"
-  - name: GitHub
-    link: https://github.com/MerenguesGeek
-    icon: icon-github-line
-    color: "#181717"
+  # - name: GitHub
+  #   link: https://github.com/MerenguesGeek
+  #   icon: icon-github-line
+  #   color: "#181717"
   - name: E-Mail
     link: mailto:zky013152yi@gmail.com
     icon: icon-mail-line
     color: "#8E71C1"
-  - name: 微博
-    link: https://weibo.com/u/7504664437
-    icon: icon-weibo-line
-    color: "#E6162D"
+  # - name: 微博
+  #   link: https://weibo.com/u/7504664437
+  #   icon: icon-weibo-line
+  #   color: "#E6162D"
   # - name: 豆瓣
   #   link: https://www.douban.com/people/yunyoujun/
   #   icon: icon-douban-line
   #   color: "#007722"
-  - name: 网易云音乐
-    link: http://music.163.com/m/user/home?id=3419123822
-    icon: icon-netease-cloud-music-line
-    color: "#C20C0C"
-  - name: 知乎
-    link: https://www.zhihu.com/people/Merengues_Geek
-    icon: icon-zhihu-line
-    color: "#0084FF"
+  # - name: 网易云音乐
+  #   link: http://music.163.com/m/user/home?id=3419123822
+  #   icon: icon-netease-cloud-music-line
+  #   color: "#C20C0C"
+  # - name: 知乎
+  #   link: https://www.zhihu.com/people/Merengues_Geek
+  #   icon: icon-zhihu-line
+  #   color: "#0084FF"
   # - name: 哔哩哔哩
   #   link: https://space.bilibili.com/1579790
   #   icon: icon-bilibili-line
@@ -80,14 +80,14 @@ social:
   #   link: https://cdn.jsdelivr.net/gh/YunYouJun/cdn/img/about/white-qrcode-and-search.jpg
   #   icon: icon-wechat-2-line
   #   color: "#1AAD19"
-  - name: Twitter
-    link: https://twitter.com/Merengues_Geek
-    icon: icon-twitter-line
-    color: "#1da1f2"
-  - name: Telegram
-    link: https://t.me/Semi_z
-    icon: icon-telegram-line
-    color: "#0088CC"
+  # - name: Twitter
+  #   link: https://twitter.com/Merengues_Geek
+  #   icon: icon-twitter-line
+  #   color: "#1da1f2"
+  # - name: Telegram
+  #   link: https://t.me/Semi_z
+  #   icon: icon-telegram-line
+  #   color: "#0088CC"
   # - name: Telegram Channel
   #   link: https://t.me/elpsycn
   #   icon: icon-telegram-fill
