--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -7,7 +7,7 @@ title: ''
 subtitle: ''
 description: 'Do not go gentle into that good night.'
 keywords:
-author: Merengues0x2A
+author: Powerball0x2A
 language: zh-CN
 timezone: ''
 
