--- a/blog/source/_data/yun.yml
+++ b/blog/source/_data/yun.yml
@@ -33,12 +33,12 @@ toc:
 
 # Social Links.
 social:
-  - name: RSS
+  # - name: RSS
     # set rss in your root config
     # https://github.com/hexojs/hexo-generator-feed
-    link: /atom.xml # config.feed.path
-    icon: icon-rss-line
-    color: orange
+    # link: /atom.xml # config.feed.path
+    # icon: icon-rss-line
+    # color: orange
   # - name: QQ
   #   # https://isux.tencent.com/wp-content/uploads/2016/05/20160512101222609.pdf
   #   link: https://wpa.qq.com/msgrd?v=3&uin=258415824&site=qq&menu=yes
@@ -305,7 +305,7 @@ vendors:
 # UI
 banner:
   enable: true
-  title: Zec的小站
+  title: 42的小站
   src: /js/ui/banner.js
   cloud: true
   go_down:
@@ -576,7 +576,7 @@ engine_search:
   href: "https://www.google.com/search?q=site:"
   # href: "https://www.baidu.com/s?wd=site:"
   # href: "https://www.bing.com/search?q=site:"
-  domain: zecis.me
+  domain: deepaxon.com
 
 # https://github.com/wzpan/hexo-generator-search
 local_search:
