--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -104,6 +104,9 @@ include:
 exclude:
 ignore:
 
+server:
+  compress: true
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
