--- a/blog/package.json
+++ b/blog/package.json
@@ -29,7 +29,9 @@
     "hexo-renderer-marked": "^3.3.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
+    "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-cloud": "^2.1.2",
+    "hexo-tag-dplayer": "^0.3.3",
     "install": "^0.13.0",
     "wordcloud": "^1.1.1"
   }
